new MDB URL added

--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,1 +1,1 @@
-MONGODB_URL = 'mongodb+srv://chamari:itp1234@chamari-cluster.2jqwij2.mongodb.net/'
+MONGODB_URL = 'mongodb+srv://itpt105:T105@glamourlane.elhqqir.mongodb.net/'
