--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,1 +1,1 @@
-MONGODB_URL=mongodb+srv://itpt105:T105@glamourlane.elhqqir.mongodb.net/;
+MONGODB_URL=mongodb+srv://chavidu:itpt105@glamourlane.elhqqir.mongodb.net/salonChamari
