--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,1 +1,1 @@
-MONGODB_URL = 'mongodb+srv://chavidu:itpt105@glamourlane.elhqqir.mongodb.net/salonChamari'
+MONGODB_URL = mongodb+srv://maleeshaAluwihare:Password2001@studentmanagementsystem.onf1dkj.mongodb.net/
