--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "mongoose": "^8.1.3",
+    "nodemailer": "^6.9.11",
     "nodemon": "^3.0.3"
   }
 }
