--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "mongoose": "^8.1.2",
     "nodemon": "^3.0.3"
   }
