--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "^5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "react-slideshow-image": "^4.3.1",
+    "sweetalert2": "^11.10.7",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:8070",
