--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/MaleeshaAluwihare/SalonChamari#readme",
   "dependencies": {
+    "chart.js": "^4.4.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
