client side and admin side frontend and backend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,18 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.2",
+    "@testing-library/user-event": "^14.5.2",
+    "antd": "^5.16.2",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
+    "cors": "^2.8.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
-    "mdb-react-ui-kit": "^7.2.0",
+    "mdb-react-ui-kit": "^8.0.0",
+    "pdfmake": "^0.2.10",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
@@ -27,9 +30,10 @@
     "react-simple-typewriter": "^5.0.1",
     "react-slideshow-image": "^4.3.1",
     "react-spring": "^9.7.3",
+    "react-to-print": "^2.15.1",
     "react-transition-group": "^4.4.5",
-    "sweetalert2": "^11.10.7",
-    "web-vitals": "^2.1.4"
+    "sweetalert2": "^11.10.8",
+    "web-vitals": "^3.5.2"
   },
   "proxy": "http://localhost:8070",
   "scripts": {
