--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,22 +4,30 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
     "date-and-time": "^3.1.1",
+    "formik": "^2.4.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "react-slideshow-image": "^4.3.1",
+    "react-to-pdf": "^1.0.1",
+    "react-to-print": "^2.15.1",
+    "turn.js": "^1.0.5",
     "web-vitals": "^2.1.4"
   },
-
   "proxy": "http://localhost:8070",
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
