--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/MaleeshaAluwihare/SalonChamari#readme",
   "dependencies": {
+    "@react-pdf/renderer": "^3.4.4",
     "chart.js": "^2.9.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
