--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
-    "jspdf": "^2.5.1",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "date-and-time": "^3.1.1",
     "formik": "^2.4.5",
+    "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "mdb-react-ui-kit": "^7.2.0",
     "moment": "^2.30.1",
@@ -34,6 +34,7 @@
     "react-to-pdf": "^1.0.1",
     "react-to-print": "^2.15.1",
     "react-transition-group": "^4.4.5",
+    "regexpu-core": "^6.0.0",
     "sweetalert2": "^11.10.7",
     "turn.js": "^1.0.5",
     "web-vitals": "^2.1.4"
