--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/MaleeshaAluwihare/SalonChamari#readme",
   "dependencies": {
+    "avatar-initials": "^6.0.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.2",
@@ -30,6 +31,7 @@
     "mongoose": "^8.2.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "otp-generator": "^4.0.1"
   }
 }
