--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,13 +18,13 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "cors": "^2.8.5",
+    "date-and-time": "^3.1.1",
+    "formik": "^2.4.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "mdb-react-ui-kit": "^8.0.0",
-    "pdfmake": "^0.2.10",
-    "date-and-time": "^3.1.1",
-    "formik": "^2.4.5",
     "moment": "^2.30.1",
+    "pdfmake": "^0.2.10",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-calendar": "^4.8.0",
@@ -35,13 +35,15 @@
     "react-simple-typewriter": "^5.0.1",
     "react-slideshow-image": "^4.3.1",
     "react-spring": "^9.7.3",
+    "react-to-pdf": "^1.0.1",
     "react-to-print": "^2.15.1",
     "react-transition-group": "^4.4.5",
-    "sweetalert2": "^11.10.8",
-    "web-vitals": "^3.5.2",
-    "react-to-pdf": "^1.0.1",
+    "regenerator-runtime": "^0.14.1",
     "regexpu-core": "^6.0.0",
-    "turn.js": "^1.0.5"
+    "turn.js": "^1.0.5",
+    "styled-components": "^6.1.9",
+    "sweetalert2": "^11.10.8",
+    "web-vitals": "^3.5.2"
   },
   "proxy": "http://localhost:8070",
   "scripts": {
