--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -1,4 +1,4 @@
-{
+ {
   "name": "backend",
   "version": "1.0.0",
   "description": "Salon web project",
@@ -19,10 +19,11 @@
   "homepage": "https://github.com/MaleeshaAluwihare/SalonChamari#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.3",
-    "express": "^4.18.2",
-    "mongoose": "^8.1.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
+    "node": "^21.7.1",
     "nodemon": "^3.0.3"
   }
 }
