--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "frontend",
   "version": "0.1.0",
@@ -33,7 +32,7 @@
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "react-slideshow-image": "^4.3.1",
     "react-spring": "^9.7.3",
@@ -42,6 +41,7 @@
     "react-transition-group": "^4.4.5",
     "regenerator-transform": "^0.15.2",
     "regexpu-core": "^6.0.0",
+    "schema-utils": "^4.2.0",
     "styled-components": "^6.1.9",
     "sweetalert2": "^11.10.8",
     "turn.js": "^1.0.5",
